MM-99 - MobileMessaging details
* developers do not have to set the default notification title
* added custom title colors for prod and io variants
* displaying only 2 lines of message text in the list

--- a/infobip-mobile-messaging-android-demo/src/io/res/values/colors.xml
+++ b/infobip-mobile-messaging-android-demo/src/io/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#df531b</color>
-    <color name="colorPrimaryDark">#d84315</color>
+    <color name="colorPrimary">#fb00c5</color>
+    <color name="colorPrimaryDark">#d500f9</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
