--- a/infobip-mobile-messaging-android-demo/src/main/res/layout/list_group.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/layout/list_group.xml
@@ -10,6 +10,9 @@
             android:id="@+id/lblListHeader"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:lines="2"
+            android:ellipsize="end"
             android:textSize="15dip"
             android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"/>
 
