--- a/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_general.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_general.xml
@@ -48,18 +48,8 @@
             android:maxLines="1"
     />
     <Preference
-            android:key="org.infobip.mobile.messaging.stats.CREATE_REGISTRATION_ERROR"
-            android:title="@string/pref_title_create_registration_error"
-            android:defaultValue="0"
-            android:selectAllOnFocus="true"
-            android:inputType="number"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
-    <Preference
-            android:key="org.infobip.mobile.messaging.stats.UPDATE_REGISTRATION_ERROR"
-            android:title="@string/pref_title_update_registration_error"
+            android:key="org.infobip.mobile.messaging.stats.REGISTRATION_SYNC_ERROR"
+            android:title="@string/pref_title_registration_sync_error"
             android:defaultValue="0"
             android:selectAllOnFocus="true"
             android:inputType="number"
