MM-127 - Readme MD moved and modified
* Refactored some configuration stuff
* Added documentation for main classes and methods
* Not using long running processes nor AsyncTasks in MobileMessagingGcmReceiver

--- a/infobip-mobile-messaging-android-demo/src/main/res/layout/list_item.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/layout/list_item.xml
@@ -8,18 +8,20 @@
             android:id="@+id/lblListItem"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dip"
+            android:textSize="17sp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:paddingRight="?android:attr/expandableListPreferredChildPaddingLeft" />
 
     <TextView
             android:id="@+id/lblListItem2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textSize="17dip"
+            android:textSize="17sp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:paddingRight="?android:attr/expandableListPreferredChildPaddingLeft" />
 
 </LinearLayout>
