--- a/infobip-mobile-messaging-android-demo/src/main/res/layout/content_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/layout/content_main.xml
@@ -21,17 +21,17 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/total_received"
-                android:id="@+id/textView" android:layout_gravity="left|center_vertical" android:layout_row="0"
+                android:id="@+id/textView" android:layout_gravity="start|center_vertical" android:layout_row="0"
                 android:layout_column="0"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/erase_inbox"
-                android:id="@+id/eraseInboxButton" android:layout_gravity="center_vertical|right" android:layout_row="0"
+                android:id="@+id/eraseInboxButton" android:layout_gravity="center_vertical|end" android:layout_row="0"
                 android:layout_column="2" android:onClick="onEraseInboxClick" android:nestedScrollingEnabled="false"/>
         <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/message_count_default"
-                  android:id="@+id/totalReceivedTextView" android:layout_gravity="left|center_vertical" android:layout_row="0"
+                  android:id="@+id/totalReceivedTextView" android:layout_gravity="start|center_vertical" android:layout_row="0"
                   android:layout_column="1" android:layout_marginLeft="5dp"/>
     </GridLayout>
     <LinearLayout
