--- a/infobip-mobile-messaging-android-demo/src/main/res/layout/list_group.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/layout/list_group.xml
@@ -13,7 +13,8 @@
             android:maxLines="2"
             android:lines="2"
             android:ellipsize="end"
-            android:textSize="15dip"
-            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"/>
+            android:textSize="15sp"
+            android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+            android:paddingRight="?android:attr/expandableListPreferredItemPaddingLeft"/>
 
 </LinearLayout>
