--- a/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_general.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_general.xml
@@ -47,6 +47,22 @@
             android:singleLine="true"
             android:maxLines="1"
     />
+    <EditTextPreference
+            android:key="org.infobip.mobile.messaging.infobip.MSISDN"
+            android:title="@string/pref_title_msisdn"
+            android:defaultValue="@string/pref_default_msisdn"
+            android:selectAllOnFocus="true"
+            android:inputType="text"
+            android:capitalize="none"
+            android:singleLine="true"
+            android:maxLines="1"
+    />
+    <SwitchPreference
+            android:key="org.infobip.mobile.messaging.infobip.MSISDN_SAVED"
+            android:title="@string/pref_title_msisdn_saved"
+            android:summary="@string/pref_description_msisdn_saved"
+            android:defaultValue="false"/>
+
     <Preference
             android:key="org.infobip.mobile.messaging.stats.REGISTRATION_SYNC_ERROR"
             android:title="@string/pref_title_registration_sync_error"
@@ -60,6 +76,16 @@
     <Preference
             android:key="org.infobip.mobile.messaging.stats.DELIVERY_REPORTING_ERROR"
             android:title="@string/pref_title_delivery_reporting_error"
+            android:defaultValue="0"
+            android:selectAllOnFocus="true"
+            android:inputType="number"
+            android:capitalize="none"
+            android:singleLine="true"
+            android:maxLines="1"
+    />
+    <Preference
+            android:key="org.infobip.mobile.messaging.stats.MSISDN_SYNC_ERROR"
+            android:title="@string/pref_title_msisdn_sync_error"
             android:defaultValue="0"
             android:selectAllOnFocus="true"
             android:inputType="number"
