--- a/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_general.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_general.xml
@@ -51,7 +51,7 @@
             android:key="org.infobip.mobile.messaging.infobip.MSISDN"
             android:title="@string/pref_title_msisdn"
             android:selectAllOnFocus="true"
-            android:inputType="text"
+            android:inputType="number"
             android:capitalize="none"
             android:singleLine="true"
             android:maxLines="1"
