--- a/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_information.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_information.xml
@@ -1,90 +1,57 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
-            android:key="org.infobip.mobile.messaging.infobip.REGISTRATION_ID"
-            android:title="@string/pref_title_infobip_registration_id"
-            android:defaultValue="@string/pref_default_infobip_registration_id"
-            android:selectAllOnFocus="true"
-            android:inputType="text"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
+        android:key="org.infobip.mobile.messaging.demo.APP_CODE"
+        android:title="@string/pref_title_application_code"
+        android:defaultValue="@string/infobip_application_code"
+        android:selectAllOnFocus="true"
+        android:inputType="text"
+        android:capitalize="none"
+        android:singleLine="true"
+        android:maxLines="1" />
     <Preference
-            android:key="org.infobip.mobile.messaging.infobip.APPLICATION_CODE"
-            android:title="@string/pref_title_application_code"
-            android:defaultValue="@string/pref_default_application_code"
-            android:selectAllOnFocus="true"
-            android:inputType="text"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
+        android:key="org.infobip.mobile.messaging.demo.GCM_SENDER_ID"
+        android:title="@string/pref_title_gcm_sender_id"
+        android:defaultValue="@string/google_app_id"
+        android:selectAllOnFocus="true"
+        android:inputType="text"
+        android:capitalize="none"
+        android:singleLine="true"
+        android:maxLines="1" />
     <Preference
-            android:key="org.infobip.mobile.messaging.gcm.REGISTRATION_ID"
-            android:title="@string/pref_title_gcm_registration_id"
-            android:defaultValue="@string/pref_default_gcm_registration_id"
-            android:selectAllOnFocus="true"
-            android:inputType="text"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
-
-    <SwitchPreference
-            android:key="org.infobip.mobile.messaging.gcm.GCM_REGISTRATION_ID_REPORTED"
-            android:title="@string/pref_title_gcm_registration_id_reported"
-            android:summary="@string/pref_description_gcm_registration_id_reported"
-            android:defaultValue="false"/>
-
+        android:key="org.infobip.mobile.messaging.demo.GCM_TOKEN"
+        android:title="@string/pref_title_gcm_registration_id"
+        android:defaultValue="@string/pref_default_gcm_registration_id"
+        android:selectAllOnFocus="true"
+        android:inputType="text"
+        android:capitalize="none"
+        android:singleLine="true"
+        android:maxLines="1" />
     <Preference
-            android:key="org.infobip.mobile.messaging.gcm.GCM_SENDER_ID"
-            android:title="@string/pref_title_gcm_sender_id"
-            android:defaultValue="@string/pref_default_gcm_sender_id"
-            android:selectAllOnFocus="true"
-            android:inputType="text"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
+        android:key="org.infobip.mobile.messaging.demo.INFOBIP_REGISTRATION_ID"
+        android:title="@string/pref_title_infobip_registration_id"
+        android:defaultValue="@string/pref_default_infobip_registration_id"
+        android:selectAllOnFocus="true"
+        android:inputType="text"
+        android:capitalize="none"
+        android:singleLine="true"
+        android:maxLines="1" />
     <Preference
-            android:key="org.infobip.mobile.messaging.stats.REGISTRATION_SYNC_ERROR"
-            android:title="@string/pref_title_registration_sync_error"
-            android:defaultValue="0"
-            android:selectAllOnFocus="true"
-            android:inputType="number"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
+        android:key="org.infobip.mobile.messaging.demo.LAST_API_COMMUNICATION_ERROR"
+        android:title="@string/pref_title_last_api_error"
+        android:defaultValue="No errors found"
+        android:selectAllOnFocus="true"
+        android:inputType="number"
+        android:capitalize="none"
+        android:singleLine="true"
+        android:maxLines="50" />
     <Preference
-            android:key="org.infobip.mobile.messaging.stats.DELIVERY_REPORTING_ERROR"
-            android:title="@string/pref_title_delivery_reporting_error"
-            android:defaultValue="0"
-            android:selectAllOnFocus="true"
-            android:inputType="number"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
-    <Preference
-            android:key="org.infobip.mobile.messaging.stats.MSISDN_SYNC_ERROR"
-            android:title="@string/pref_title_msisdn_sync_error"
-            android:defaultValue="0"
-            android:selectAllOnFocus="true"
-            android:inputType="number"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="1"
-    />
-    <Preference
-            android:key="org.infobip.mobile.messaging.infobip.LAST_HTTP_EXCEPTION"
-            android:title="@string/pref_title_last_http_error"
-            android:defaultValue="No errors found"
-            android:selectAllOnFocus="true"
-            android:inputType="number"
-            android:capitalize="none"
-            android:singleLine="true"
-            android:maxLines="50"
-    />
+        android:key="org.infobip.mobile.messaging.demo.LAST_API_PARAMETER_VALIDATION_ERROR"
+        android:title="@string/pref_title_last_validation_error"
+        android:defaultValue="No errors found"
+        android:selectAllOnFocus="true"
+        android:inputType="number"
+        android:capitalize="none"
+        android:singleLine="true"
+        android:maxLines="50" />
 </PreferenceScreen>
