--- a/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_notification.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/xml/pref_notification.xml
@@ -3,7 +3,7 @@
     <!-- A 'parent' preference, which enables/disables child preferences (below)
          when checked/unchecked. -->
     <SwitchPreference
-            android:key="notifications_new_message"
+            android:key="org.infobip.mobile.messaging.demo.NOTIFICATION_ENABLED"
             android:title="@string/pref_title_new_message_notifications"
             android:defaultValue="true"/>
 
@@ -11,16 +11,16 @@
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
     <RingtonePreference
-            android:dependency="notifications_new_message"
-            android:key="notifications_new_message_ringtone"
+            android:dependency="org.infobip.mobile.messaging.demo.NOTIFICATION_ENABLED"
+            android:key="org.infobip.mobile.messaging.demo.NOTIFICATION_SOUND"
             android:title="@string/pref_title_ringtone"
             android:ringtoneType="notification"
             android:defaultValue="content://settings/system/notification_sound"/>
 
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <SwitchPreference
-            android:dependency="notifications_new_message"
-            android:key="notifications_new_message_vibrate"
+            android:dependency="org.infobip.mobile.messaging.demo.NOTIFICATION_ENABLED"
+            android:key="org.infobip.mobile.messaging.demo.NOTIFICATION_VIBRATE"
             android:title="@string/pref_title_vibrate"
             android:defaultValue="true"/>
 
