MM-3146 MM-3160 Personalize/depersonalize WIP.

--- a/infobip-mobile-messaging-android-demo/src/push/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/push/res/menu/menu_main.xml
@@ -25,8 +25,8 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_logout"
-        android:title="@string/menu_action_logout"
+        android:id="@+id/action_depersonalize"
+        android:title="@string/menu_action_depersonalize"
         app:showAsAction="never" />
 
 </menu>
