- renamed: UserData to User, CustomUserData to CustomAttribute, osLanguage to language - timezone offset POC - refined events and listeners - refined API - MM-3160 personalize

--- a/infobip-mobile-messaging-android-demo/src/push/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/push/res/menu/menu_main.xml
@@ -15,7 +15,7 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_gsm"
+        android:id="@+id/action_phone"
         android:title="@string/menu_action_gsm"
         app:showAsAction="never" />
 
