--- a/infobip-mobile-messaging-android-demo/src/push/res/layout/activity_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/push/res/layout/activity_main.xml
@@ -8,9 +8,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
