Pull request #189: Okoroleva CHAT-618 ErrorState
Merge in MML/infobip-mobile-messaging-android from okoroleva-CHAT-618_ErrorState to master

Squashed commit of the following:

commit fb5862042254d98d0f207b873ebb6c148308b47a
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 21:28:02 2020 +0300

    fixes after PR

commit d99da529b18a6887e4095e36aa4d550fedb37d15
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 16:42:43 2020 +0300

    removed not needed strings

commit 17965a9ef8579f28e87b63dd320cdf2040b151e6
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 16:42:00 2020 +0300

    fixes after PR

commit 2c7503beb4a3c87dae5eaadf726015d11fed7fc3
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 16:22:38 2020 +0300

    fixes after PR

commit ac5c1f53848abe0422e6d34498b9732790c7bc51
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 12:27:12 2020 +0300

    Errors handling change

commit be3d16eebf7238579eaf299ac14ba178154c1bab
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 11:38:47 2020 +0300

    chat views configuration update, chatBroadcastrer, Errors handling

commit a6f276cb02a9e455a709f1d41bcd7134b7e8c9a7
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 10 17:02:56 2020 +0300

    translations

commit 0d06352af22372738d90cf2d4ba24506d0626b4f
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 10 16:56:31 2020 +0300

    translations

commit a9262fcf84df5f67837b0fc862276bbef7836dd5
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 10 16:13:39 2020 +0300

    animated tv when connection not available

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
     tools:context="org.infobip.mobile.messaging.chat.view.InAppChatActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/IB_AppTheme.AppBarOverlay">
@@ -20,29 +21,23 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:id="@+id/ib_tv_chat_not_available"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="40dp"
-        android:gravity="center_horizontal"
-        android:text="@string/ib_chat_not_available"
-        android:textSize="16sp"
-        android:visibility="gone" />
-
     <ProgressBar
         android:id="@+id/ib_pb_chat"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="70dp"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:layout_centerInParent="true"/>
 
     <WebView
         android:id="@+id/ib_wv_in_app_chat"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:visibility="invisible" />
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:visibility="invisible"
+        android:layout_below="@+id/appBarLayout"
+        android:layout_above="@+id/ib_rl_send_message"/>
 
     <RelativeLayout
         android:id="@+id/ib_rl_send_message"
@@ -50,7 +45,9 @@
         android:layout_height="45dp"
         android:background="@drawable/light_border"
         android:orientation="horizontal"
-        android:padding="3dp">
+        android:padding="3dp"
+        android:layout_alignParentBottom="true"
+        app:layout_anchorGravity="center">
 
         <EditText
             android:id="@+id/ib_et_message_text"
@@ -86,4 +83,15 @@
             android:src="@drawable/ib_chat_send_btn_icon" />
 
     </RelativeLayout>
-</LinearLayout>
+    <TextView
+        android:id="@+id/ib_tv_chat_not_connected"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@android:color/darker_gray"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/ib_chat_no_connection"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:visibility="visible"
+        android:layout_alignBottom="@+id/appBarLayout"/>
+</RelativeLayout>
