Pull request #191: fix
Merge in MML/infobip-mobile-messaging-android from okoroleva_MM-4018_ChatNoConnectionTVFix to master

Squashed commit of the following:

commit 3d2badb096439b87dba3e944b494200d1827b23f
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Jun 19 11:27:49 2020 +0300

    fix

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
@@ -86,7 +86,7 @@
     <TextView
         android:id="@+id/ib_tv_chat_not_connected"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="@dimen/chat_not_available_tv_height"
         android:background="@android:color/darker_gray"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/ib_chat_no_connection"
