--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/dimens.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="button_horizontal_margin_left">16dp</dimen>
     <dimen name="button_horizontal_margin_right">8dp</dimen>
     <dimen name="button_padding">2dp</dimen>
+    <dimen name="chat_not_available_tv_height">30dp</dimen>
 </resources>
