Pull request #204: CHAT-599/chat recieved attachments preview
Merge in MML/infobip-mobile-messaging-android from CHAT-599/chat-recieved-attachments-preview to master

Squashed commit of the following:

commit d5642a43299a542bdd21a21e38ca75bac797c546
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Wed Sep 9 14:40:23 2020 +0300

    [CHAT-599] Added preloader for attach downloading

commit 721dfb206dc20e2ce12b65262faa44c75116acc1
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Wed Sep 9 12:45:32 2020 +0300

    [CHAT-599] Added not found img for documents & refactoring

commit f5ab43b6f4b72a9711ce12389ea427dabf443797
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Wed Sep 9 10:26:45 2020 +0300

    [CHAT-599] Changed color theme for attach preview

commit 5c4273067339b047b66b1729be0ff93f98605c1b
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Wed Sep 9 10:12:10 2020 +0300

    [CHAT-599] Review fixes

commit a74a02cec01d063ec9c9c88c4a4190c4c6b134ca
Author: tjuric <tereza.juric@infobip.com>
Date:   Tue Sep 8 17:17:19 2020 +0200

    CHAT-599 PR fix for not null input params

commit 5bad506aac3c1221c4c8580d6a01be3b0d39f6fe
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Fri Sep 4 11:19:14 2020 +0300

    [CHAT-599] Refactored attach preview html

commit 9d039fa0088810cca74b0d3f62bd71d41610d214
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Wed Sep 2 10:46:20 2020 +0300

    [CHAT-599] Fixed merge issues

commit 64b6da53b41f8b81b9cc0d350688a167bafd80c6
Merge: 188d8d8b b21ee738
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Mon Aug 24 10:42:47 2020 +0300

    Merge branch 'CHAT-599/chat-recieved-attachments-preview' of https://git.ib-ci.com/scm/mml/infobip-mobile-messaging-android into CHAT-599/chat-recieved-attachments-preview

commit 188d8d8b44b2f2f02bf839bbaa0ac814197d8270
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Mon A

--- a/infobip-mobile-messaging-android-demo/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/styles.xml
@@ -21,6 +21,13 @@
         <item name="titleTextColor">@android:color/white</item>
     </style>
 
+    <style name="IB_AppTheme.ChatAttach">
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorControlNormal">@android:color/white</item>
+        <item name="titleTextColor">@android:color/white</item>
+    </style>
+
     <style name="IB_AppTheme.WebView">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
