--- a/infobip-mobile-messaging-android-demo/src/main/res/values/colors.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="red">#FFA8B1</color>
     <color name="green">#BAFFB7</color>
     <color name="blue">#A8D2F3</color>
+    <color name="black">#000</color>
 
 </resources>
