Pull request #210: DefaultAttachmentPreviewTheme
Merge in MML/infobip-mobile-messaging-android from okoroleva_MM-4162_InAppChatReceiverLeakFix to master

Squashed commit of the following:

commit d4289b867f7f8d306bc182c8139de13993fab0ba
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Oct 16 13:23:44 2020 +0300

    minor change after PR

commit 0a00882279c4c55dcc040d54b9d61eb7dc2b9e43
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Oct 16 11:47:17 2020 +0300

    DefaultAttachmentPreviewTheme

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat_attach_preview.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat_attach_preview.xml
@@ -10,8 +10,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/ib_chat_attach_tb"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:minHeight="?attr/actionBarSize"
+        android:layout_height="?attr/actionBarSize"
         android:theme="@style/IB_WebViewTheme.PopupOverlay">
 
         <TextView
@@ -32,7 +31,10 @@
         android:id="@+id/ib_chat_attach_wv"
         android:layout_below="@+id/ib_chat_attach_tb"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_height="0dp" />
 
     <ProgressBar
         android:id="@+id/ib_chat_attach_pb"
