Pull request #219: Okoroleva MM-4292 InAppChatSlowLoading
Merge in MML/infobip-mobile-messaging-android from okoroleva_MM-4292-InAppChatSlowLoading to master

Squashed commit of the following:

commit 51535dd1d1a646471c76ecfd6fb35cb787268458
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Dec 24 13:36:14 2020 +0300

    Close keyboard when In-App Chat Fragment hidded

commit ff3f0ec6a34b06cb3a67af10cadc97268e8a6f71
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Dec 23 17:41:08 2020 +0300

    alignments

commit db15683d9b36fe2301d801398e4e630b60d26ac7
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Dec 23 17:17:36 2020 +0300

    Code alignments

commit 64f1c970444bcae5f070a095b804b424c0e675d7
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Dec 23 16:51:43 2020 +0300

    refactoring

commit fa67874c7388db67b1f64b64bdfd9208881b100f
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Dec 23 16:46:34 2020 +0300

    InAppChat webView will reload only if cache cleaned up

commit 18b8c5bd2475fc0562fa2edf9f4b4e1fd8badff9
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Dec 23 11:31:09 2020 +0300

    In-app Chat Fragment onPause/onResume should not proceed if we open some in-app chat Activity

commit dd994d89e68cb7d6947d933b6c29809dbd3b8aad
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Dec 22 16:27:32 2020 +0300

    fix for synchronization of In-app Configuration for fragment

commit 92a0c1036ce0aa53b4b890b510b0074ee29c6aaf
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Dec 22 11:11:27 2020 +0300

    LastHttpException removed as not needed
    broadcastReceivers register/onregister refactoring in InAppChatFragment

commit 4470ecf82aa1bd79e539c4b2d68b214c26793894
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Dec 17 13:18:05 2020 +0300

    moved work with activity to onViewCreated method

commit 7d98338f5819aeb628e6f06ee1b3a33ac1f311bc
Author: O

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat.xml
@@ -6,103 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="org.infobip.mobile.messaging.chat.view.InAppChatActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <fragment
+        android:name="org.infobip.mobile.messaging.chat.view.InAppChatFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/IB_AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/ib_toolbar_chat"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/IB_AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <ProgressBar
-        android:id="@+id/ib_pb_chat"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="70dp"
-        android:visibility="visible"
-        android:layout_centerInParent="true"/>
-
-    <WebView
-        android:id="@+id/ib_wv_in_app_chat"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:visibility="invisible"
-        android:layout_below="@+id/appBarLayout"
-        android:layout_above="@+id/ib_rl_send_message"/>
-
-    <RelativeLayout
-        android:id="@+id/ib_rl_send_message"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/light_border"
-        android:orientation="horizontal"
-        android:padding="3dp"
-        android:layout_alignParentBottom="true"
-        app:layout_anchorGravity="center">
-
-        <EditText
-            android:id="@+id/ib_et_message_text"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@+id/ib_btn_send"
-            android:layout_toLeftOf="@+id/ib_btn_send"
-            android:layout_toEndOf="@+id/ib_btn_send_attachment"
-            android:layout_toRightOf="@+id/ib_btn_send_attachment"
-            android:background="@null"
-            android:enabled="false"
-            android:hint="@string/ib_chat_message_hint"
-            android:inputType="text"
-            android:maxLines="4"
-            android:minHeight="30dp"
-            android:scrollbars="vertical"
-            android:textSize="14sp"
-            android:layout_width="315dp" />
-
-        <ImageView
-            android:id="@+id/ib_btn_send"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:contentDescription="@string/ib_iv_btn_send_desc"
-            android:enabled="false"
-            android:src="@drawable/ib_chat_send_btn_icon" />
-
-        <ImageView
-            android:id="@+id/ib_btn_send_attachment"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="0dp"
-            android:contentDescription="@string/ib_iv_btn_send_attachment_desc"
-            android:enabled="false"
-            android:src="@drawable/ib_chat_attachment_btn_icon"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="0dp" />
-
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/ib_tv_chat_not_connected"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/chat_not_available_tv_height"
-        android:background="@android:color/darker_gray"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/ib_chat_no_connection"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
-        android:visibility="visible"
-        android:layout_alignBottom="@+id/appBarLayout"/>
+        android:layout_height="match_parent"
+        android:id="@+id/ib_in_app_chat_fragment" />
 </RelativeLayout>
