Pull request #226: CHAT-1130
Merge in MML/infobip-mobile-messaging-android from abystrov_CHAT-1130_fix-chat-input to master

Squashed commit of the following:

commit 61358eb112d6922b052c4a58197bbe715ce11360
Author: Alexey Bystrov <alexey.bystrov@infobip.com>
Date:   Tue Feb 9 14:58:49 2021 +0300

    CHAT-1130

    Fix chat input (make it multiline)

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
@@ -43,7 +43,7 @@
     <RelativeLayout
         android:id="@+id/ib_rl_send_message"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/light_border"
         android:orientation="horizontal"
         android:padding="3dp"
@@ -61,11 +61,11 @@
             android:background="@null"
             android:enabled="false"
             android:hint="@string/ib_chat_message_hint"
-            android:inputType="text"
-            android:maxLines="4"
+            android:inputType="textMultiLine"
+            android:maxLines="5"
             android:minHeight="30dp"
             android:scrollbars="vertical"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:layout_width="315dp" />
 
         <ImageView
