Pull request #230: CHAT-1166/style fixes
Merge in MML/infobip-mobile-messaging-android from CHAT-1166/style-fixes to master

Squashed commit of the following:

commit e1169ca13294915762c9810257124dd35b9251c0
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Fri Feb 26 12:56:45 2021 +0300

    Reverted local strings

commit 35f38764e44736fcee85f0fca4c3940dfc9d24e4
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Fri Feb 26 12:55:26 2021 +0300

    [CHAT-1166] Style fixes version 2

commit db0cbee0e3ab89452f9970173f1d286ce78a5233
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Thu Feb 25 21:34:07 2021 +0300

    [CHAT-1166] Fixed send button positioning

commit 0a8acdba774c8b78d5fc0f6b081059dcd22f5d14
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Thu Feb 25 21:14:54 2021 +0300

    Reverted local strings

commit 7ab1a00a1c03dd0c6c3e6bffedac665308d844c3
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Thu Feb 25 21:13:07 2021 +0300

    [CHAT-1166] Removed unnecessary styles

commit 7f4271675960aafbd56948ac5531e46de500ca3b
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Thu Feb 25 20:48:18 2021 +0300

    [CHAT-1166] Fixed width of input

commit 62cc4c9517fe0f839c421c005d2836bb9ffce088
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Thu Feb 25 20:40:17 2021 +0300

    [CHAT-1166] Make sticky buttons to bottom

commit 0cc832474f424881585c85cf4bfedc19f53c134b
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Thu Feb 25 16:37:34 2021 +0300

    [CHAT-1166] Fixed imput layout styles

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/drawable/ib_chat_send_btn_icon.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/drawable/ib_chat_send_btn_icon.xml
@@ -1,10 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="20dp"
-    android:viewportWidth="24"
-    android:viewportHeight="20">
-  <path
-      android:pathData="M1,19.981l22.217,-9.526a0.5,0.5 0,0 0,0 -0.92L1.005,0.013a0.5,0.5 0,0 0,-0.697 0.462l0.04,7.605a0.5,0.5 0,0 0,0.447 0.495l14.092,1.48 -14.15,1.243a0.5,0.5 0,0 0,-0.457 0.5l0.022,7.726a0.5,0.5 0,0 0,0.697 0.458z"
-      android:fillColor="#B4B4B4"
-      android:fillType="nonZero"/>
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="30"
+    android:viewportHeight="30">
+
+  <group android:translateX="3.1" android:translateY="6">
+    <path
+        android:pathData="M1,19.981l22.217,-9.526a0.5,0.5 0,0 0,0 -0.92L1.005,0.013a0.5,0.5 0,0 0,-0.697 0.462l0.04,7.605a0.5,0.5 0,0 0,0.447 0.495l14.092,1.48 -14.15,1.243a0.5,0.5 0,0 0,-0.457 0.5l0.022,7.726a0.5,0.5 0,0 0,0.697 0.458z"
+        android:fillColor="#B4B4B4"
+        android:fillType="nonZero"/>
+  </group>
+
 </vector>
